Bug 474120 - Cannot remove item from Favorites when the file it points to has been renamed or removed
Summary: Cannot remove item from Favorites when the file it points to has been renamed...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 5.27.7
Platform: Debian testing Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 472688 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-03 21:53 UTC by Alex
Modified: 2023-09-30 04:35 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2023-09-03 21:53:38 UTC
When one adds a folder to the kickoff startmenu and the folder is deleted, it seems not to be possible to remove it later on. I can right click it and see a submenu "Show in Favorites" in which none of the activities is checked. One also cannot assign the item to an activity and I see no option to remove the item except for creating the folder again and then removing it from favourites.

SOFTWARE/OS VERSIONS
Operating System: Debian GNU/Linux 12
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.107.0
Qt Version: 5.15.10
Comment 1 Nate Graham 2023-09-05 20:35:15 UTC
Amazing, can reproduce.
Comment 2 Nate Graham 2023-09-07 20:37:19 UTC
*** Bug 472688 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2023-09-27 12:17:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3338
Comment 4 Bug Janitor Service 2023-09-27 12:17:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kactivitymanagerd/-/merge_requests/56
Comment 5 Méven Car 2023-09-28 13:04:51 UTC
Git commit 4697049e23fa1920ed1e79ed0bb6f121bf2a630d by Méven Car, on behalf of Méven Car.
Committed on 28/09/2023 at 15:04.
Pushed by meven into branch 'master'.

ResourceUnlinking: Unlink allow to remove not existing files from favorites

M  +3    -3    src/service/plugins/sqlite/ResourceLinking.cpp
M  +1    -1    src/service/plugins/sqlite/ResourceLinking.h

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/4697049e23fa1920ed1e79ed0bb6f121bf2a630d
Comment 6 Méven Car 2023-09-29 07:18:55 UTC
Git commit 9c26622717a56ca8baea141b3b848c67db33508f by Méven Car, on behalf of Méven Car.
Committed on 29/09/2023 at 09:08.
Pushed by meven into branch 'master'.

kastatsfavoritesmodel: don't normalizedId id of removedFavorites

M  +6    -5    applets/kicker/plugin/kastatsfavoritesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/9c26622717a56ca8baea141b3b848c67db33508f