kastatsfavoritesmodel: don't normalizedId id of removedFavorites

BUG: 474120